--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.1",
     "openai": "^5.19.1",
     "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
