--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
+    "qrcode": "^1.5.4",
     "qs": "^6.14.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
