--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^8.1.0",
     "morgan": "^1.10.1",
     "openai": "^5.19.1",
+    "puppeteer": "^24.19.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
