fix: update SPA rewrite rule in vercel.json for Vite deployment

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,10 +4,10 @@
   "installCommand": "npm install",
   "framework": "vite",
   "outputDirectory": "dist",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
