chore: update config, environment, and deployment files for full backend/frontend setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "openai": "^5.19.1",
     "puppeteer": "^24.19.0",
     "qrcode": "^1.5.4",
