Implement realistic conversational AI system
 Features:
- Natural conversation patterns with personality
- Context-aware responses that feel human-like
- Dynamic response generation (no more templates)
- Conversation memory across messages
- Casual, friendly chat style
- Realistic greetings, questions, and follow-ups
- Enhanced business inquiry handling
- Removed authentication requirement for direct access

 Technical improvements:
- Complete LLM service overhaul
- Conversation history tracking
- Multiple response layers (HuggingFace + Local AI + Fallbacks)
- SQLite user management integration
- Improved CORS configuration
- Better error handling

 User experience:
- Bot now chats like a real person
- No more repetitive template responses
- Engaging, contextual conversations
- Professional yet casual tone
- Direct WhatsApp access without login

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,29 @@ ADMIN_TOKEN=your_admin_token_here
 SESSION_DIR=./sessions
 DASHBOARD_ORIGIN=http://localhost:5173
 DB_FILE=./whatsapp.db
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/whatsapp-bot
+
+# Email Configuration (SMTP)
+# For Gmail, you'll need to use App Passwords
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password_here
+SMTP_FROM=WhatsApp Bot <your_email@gmail.com>
+
+# SMS Configuration (Twilio)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+TWILIO_PHONE_NUMBER=your_twilio_phone_number_here
+
+# OTP Configuration
+OTP_EXPIRY_MINUTES=5
+OTP_LENGTH=6
+
+# Security
+JWT_SECRET=your_jwt_secret_here_make_it_long_and_random
+
+# Development Mode (set to true for testing without actual email/SMS)
+DEV_MODE=true
