--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "socket.io": "^4.8.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "twilio": "^5.3.3",
     "whatsapp-web.js": "^1.34.0"
   },
   "devDependencies": {
