Fix deployment CORS and backend connectivity
 CORS Configuration:
- Allow Vercel frontend domain (whatsapp-bot-one-rho.vercel.app)
- Allow local development (localhost:5173, localhost:5174)
- Allow Render backend domain
- Remove credentials requirement for simpler setup

 Environment Configuration:
- Update production API URL to Render backend
- Configure Gmail SMTP for production email delivery
- Update Socket.IO CORS settings

 Deployment Ready:
- Render.yaml updated with production Gmail credentials
- Frontend environment configured for production
- Backend CORS configured for cross-domain requests

This fixes the WebSocket and API connection errors in production.

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -19,13 +19,17 @@ services:
       - key: ADMIN_TOKEN
         value: whatsappbot1234
       - key: SMTP_HOST
-        value: smtp.sendgrid.net
+        value: smtp.gmail.com
       - key: SMTP_PORT
         value: 587
       - key: SMTP_USER
-        value: apikey
+        value: help.travel.ai@gmail.com
       - key: SMTP_PASS
-        value: ${SMTP_PASS}
+        value: ozdbRjgvHfbkVdxg
+      - key: SMTP_FROM
+        value: WhatsApp Bot <help.travel.ai@gmail.com>
+      - key: OTP_EXPIRY_MINUTES
+        value: 10
     healthCheckPath: /
     autoDeploy: true
 dependencies:
